      open only for KeepalivePeriod.
    - Use "If-Modified-Since" to avoid retrieving consensus networkstatuses
      that we already have.
    - When we have no consensus, check FallbackNetworkstatusFile (defaults
      to $PREFIX/share/tor/fallback-consensus) for a consensus.  This way
      we start knowing some directory caches.

  - Utilities:
    - Update linux-tor-prio.sh script to allow QoS based on the uid of
      the Tor prossess.  See comments in scripts.  (Patch from Marco Bonetti
      with tweaks from Mike Perry.)

  o Minor bugfixes:
    - Refuse to start if both ORPort and UseBridges are set. Bugfix
      on 0.2.0.x.
    - Better log message on vote from unknown authority.

  o Minor bugfixes (memory leaks):
    - Stop leaking memory every time we parse a v3 certificate. Bugfix
      on 0.2.0.1-alpha.
    - Stop leaking memory every time we load a v3 certificate. Bugfix
      on 0.2.0.1-alpha.  Fixes Bug 536
    - Stop leaking a cached networkstatus on exit.  Bugfix on
      0.2.0.3-alpha.
    - Stop leaking voter information every time we free a consensus.  Bugfix
      on 0.2.0.3-alpha.
    - Stop leaking signed data every time we check a voter signature.
      Bugfix on 0.2.0.3-alpha.
    - Stop leaking a signature every time we fail to parse a consensus or
      a vote.  Bugfix on 0.2.0.3-alpha.
    - Stop leaking v2_download_status_map on shutdown.  Bugfix on
      0.2.0.9-alpha.


Changes in version 0.2.0.9-alpha - 2007-10-24
  This ninth development snapshot switches clients to the new v3 directory
  system; allows servers to be listed in the network status even when they
  have the same nickname as a registered server; and fixes many other
  bugs including a big one that was causing some servers to disappear
  from the network status lists for a few hours each day.

  o Major features (directory system):
    - Clients now download v3 consensus networkstatus documents instead